# scaffolds

./: .gitignore  README.md
NEXT_PERN/: turbo.0-prepare_env.zsh  turbo.3-handle_json.zsh  turbo.zsh
NEXT_PERN/res/: .dockerignore  Dockerfile.client  docker-compose.client.yml  package.json
NEXT_PERN/res/.github/workflows/: deploy.yml
NEXT_PERN/res/apps/client/: package.json  svgr.config.js  tailwind.config.ts  tsconfig.json
NEXT_PERN/res/apps/server/: package.json
NEXT_PERN/result/: package.json
NEXT_PERN/result/.github/workflows/: deploy.yml
NEXT_PERN/result/apps/client/: package.json
NEXT_PERN/result/apps/server/: package.json
NEXT_PERN/scripts/: turbo.1-add_next_to_app.zsh  turbo.2-add_fastify_to_app.zsh  turbo.4-add_essential_to_shared.zsh
NEXT_PERN/src/client/root/: vercel-ignore-build-step.js  vercel.json
NEXT_PERN/src/root/: .gitignore  Dockerfile.server  docker-compose.server.yml  turbo.json
NEXT_PERN/src/server/root/: tsconfig.json
PFN/: PFN.zsh
PFN/res/: package.json  turbo.json
PFN/res/apps/client/: Dockerfile  package.json  (+1 more)
PFN/res/apps/server/: .dockerignore  package.json  pyproject.toml
PFN/res/apps/server/src/: server.py
PFN/res/apps/server/src/conf/aws/: ce.py
PFN/res/apps/server/src/constants/: reg.py
PFN/res/apps/server/src/features/test/middleware/: check_user.py
PFN/res/apps/server/src/features/test/services/: get_user.py  post_company.py  post_job.py
PFN/res/apps/server/src/lib/: logger.py
PFN/res/apps/server/src/lib/s3/: get.py
PFN/res/apps/server/src/middleware/: check_id.py  cors.py  form_data_parser.py  json_logger.py  wrap_api.py
PFN/res/apps/server/src/models/: car.py  root.py
PFN/result/: package.json
PFN/scripts/: 0.PFN_prepare_env.zsh  1.PFN_next_app.zsh  2.PFN_py_app.zsh  3.PFN_root_files.zsh
shared_scripts/: shared.zsh
(+149 files in other folders)
